--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
   numberpicker: ^2.0.1
+  percent_indicator: ^4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
