--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   numberpicker: ^2.0.1
   percent_indicator: ^4.0.1
   audioplayers: ^0.20.1
+  lottie: ^1.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,6 +61,10 @@ flutter:
    - assets/TimerRunning1.ogg
    - assets/TimerRunningSmall.mp3
    - assets/NoMoreSnooze.mp3
+   - assets/wave-loop.json
+   - assets/wave-medium.json
+   - assets/confetti.json
+   - assets/yoga.json
 
   uses-material-design: true
 
