--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,11 @@ dependencies:
   percent_indicator: ^4.0.1
   audioplayers: ^0.20.1
   lottie: ^1.3.0
-  
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  syncfusion_flutter_charts: ^20.1.57
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
